| Priyanshu |make bolo India homepage and dashboard same as sunoIndia

--- a/crowdsource-ui/src/assets/css/home.css
+++ b/crowdsource-ui/src/assets/css/home.css
@@ -363,7 +363,7 @@ body.modal-open .supreme-container {
 }
 
 #speakers_hours_chart_container, #speakers_hours_chart {
-  height: 400px;
+  /*height: 400px;*/
 }
 
 #indiaMapChart {
@@ -418,4 +418,43 @@ body.modal-open .supreme-container {
   flex: 0 0 90%;
   max-width: 90%;
 }
+
+.contribution-details {
+  padding: 1rem 0;
+  background-color: #F8F9FA;
+  margin: 0;
+  border-radius: 8px;
+}
+
+.contribution-data > p:first-child {
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.8rem;
+}
+@media screen and (min-width: 768px) {
+  .contribution-data {
+    border-right: 1px solid #C4C4C4;
+    text-align: left;
+    padding-left: 40px;
+  }
+  .contribution-data:last-child {
+    border: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contribution-details {
+    padding: 0 3rem;
+  }
+  .contribution-data.col-md-3 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .contribution-data {
+    border-bottom: 1px solid #C4C4C4;
+    padding: 1rem 0;
+    text-align: center;
+  }
+}
+
 
