--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -72,7 +72,7 @@
                     <h1 class="display-5">
                         <%= __('Speak') %>
                     </h1>
-                    <div class="mt-3 font-weight-bold">
+                    <div class="mt-3 font-weight-normal">
                         <%= __('Contribute Your Voice') %>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     <h1 class="display-5">
                         <%= __('Validate') %>
                     </h1>
-                    <div class="mt-3 font-weight-bold">
+                    <div class="mt-3 font-weight-normal">
                         <%= __('Validate What They Say') %>
                     </div>
                 </div>
@@ -118,85 +118,24 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
-            <h1 class="display-5 font-wt-900 site-blue lh-5 mt-lg-5">
-                <%= __('Bolo India: A crowdsourcing initiative for Indian languages') %>
-            </h1>
-            <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">
-                <%= __('India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.') %>
-                <a class="ml-1" href="./about-us.html">
-                    <%= __('Know More') %>
-                </a>
-            </p>
-        </div>
-        <div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center oflow-x-hid"><img src="../img/home.svg" width="614.8" height="759.548" alt="Bolo India Infograph" class="img-fluid mr-n1">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 pt-lg-0 text-dark">
-            <h1 class="display-5 font-wt-900 site-blue lh-5">
-                <%= __('We rely on your contributions') %>
-            </h1>
-            <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">
-                <%= __('The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.') %>
-                <a class="ml-1" href="./about-us.html">
-                    <%= __('Know More') %>
-                </a>
-            </p>
+        <div class="col-12 col-md-11 col-lg-11 ml-lg-auto p-5 mt-4 text-dark">
+            <h2 class="font-wt-900 site-blue lh-5">
+                <%= __('Contributions made to Bolo India') %>
+            </h2>
             <div class="row mt-5" id="speaker-data">
-                <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left" id="loader1">
-                    <div><span class="spinner"></span></div>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left" id="loader2">
-                    <div><span class="spinner"></span></div>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left" id="loader3">
-                    <div><span class="spinner"></span></div>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left d-none" id="languages-wrapper">
-                    <p class="h4" id="languages-value"></p>
-                    <p class="mb-0 fs-h4">
-                        <%= __('languages contributed') %>
-                    </p>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left d-none" id="speakers-wrapper">
-                    <p class="h4" id="speaker-value"></p>
-                    <p class="mb-0 fs-h4">
-                        <%= __('speakers contributed') %>
-                    </p>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left d-none" id="hours-wrapper">
-                    <div class="mb-0 d-flex align-items-center"><span class="h4" id="hour-value"></span></div>
-                    <p class="mb-0 fs-h4">
-                        <%= __('hours recorded') %>
-                    </p>
+                <div class="col-12 col-lg-11 col-md-11">
+                    <div class="row justify-content-center" id="loader1">
+                        <div><span class="spinner"></span></div>
+                    </div>
+                    <div class="row text-center contribution-details" id="contribution-details">
+                        <%- include('../../build/views/common/contributionStats.ejs',{labels :['Languages','Speakers contributed','Hrs recorded','Hrs validated']}) %>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-5 col-lg-5 px-0 oflow-x-hid"></div>
     </div>
     <div class="row mb-5 lazy">
-        <div class="col-12 col-md-6 col-lg-6 ml-lg-auto pt-5 pt-lg-0 text-dark">
-            <div class="justify-content-center align-items-center d-none" id="chartSpinner">
-                <div><span class="spinner"></span></div>
-            </div>
-            <div id="indiaMapChart" style="width:100%"></div>
-            <div id="legendDiv" class="justify-content-evenly d-none">
-                <div id="quarter" class="quarter">
-                    <div class="legend-val">0 - 1hr</div>
-                </div>
-                <div id="half" class="half">
-                    <div class="legend-val">1 - 2hrs</div>
-                </div>
-                <div id="threeQuarter" class="threeQuarter">
-                    <div class="legend-val">2 - 4hrs</div>
-                </div>
-                <div id="full" class="full">
-                    <div class="legend-val">4+ hrs</div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-5 mt-xs-5 pr-lg-5">
+        <div class="col-12 col-md-11 col-lg-11 p-5 ml-lg-auto">
             <div id="bar_charts_container">
                 <h4 class="h4 mb-4">
                     <%= __('Top Languages') %>
@@ -212,20 +151,11 @@
                 <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
                     <div><span class="spinner"></span></div>
                 </div>
-                <div id="speakers_hours_chart_container" class="w-100">
-                    <div id="speakers_hours_chart" class="w-90"></div>
-                </div>
+                <%- include ../../build/views/common/horizontalBarGraph.ejs %>
             </div>
         </div>
-        <div class="col-12 col-md-12 col-lg-12 px-0 oflow-x-hid"></div>
     </div>
-    <div class="row mt-5 mb-5" id="view_all_btn">
-        <div class="col-12 d-flex justify-content-center">
-            <a href="./dashboard.html" id="viewAllDetailsBtn" class="btn btn-outline-primary text-primary">
-                <%= __('VIEW ALL DETAILS') %>
-            </a>
-        </div>
-    </div>
+    <%- include('../../build/views/common/viewAllDetailBtn.ejs',{DASHBOARD:'./dashboard.html'}); %>
 </div>
 
 <div class="modal fade" id="modal-chart-wrapper" tabindex="-1" role="dialog" aria-hidden="true">
