| Priyanshu |added speaker detail pop-up for validation in boloIndia

--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -102,8 +102,7 @@
                     </div>
                 </div>
                 <div class="col-4 text-right px-0">
-                    <a href="./validator-page.html">
-                        <img src="../img/listen.svg" alt="validator" id="start_validating" width="140px" height="140px" class="cursor-pointer listen-logo img-fluid"></a>
+                    <img src="../img/listen.svg" alt="validator" id="start_validating" data-toggle="modal" class="cursor-pointer listen-logo img-fluid" data-target="#userModal" width="140px" height="140px">
                 </div>
                 <div class="col-12 d-none position-absolute px-0" id="listen-p-2" style="bottom:1rem">
                     <div>
