--- a/crowdsource-ui/src/views/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/validator-thank-you.ejs
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
     <script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../css/home.css">
-    <link rel="stylesheet" type="text/css" href="../../css/common/common.css">
-    <link rel="stylesheet" type="text/css" href="../../css/thankyou.css">
+    <link rel="stylesheet" type="text/css" href="../css/home.css">
+    <link rel="stylesheet" type="text/css" href="../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../css/thank-you.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
 </head>
 
@@ -76,10 +76,21 @@
             </div>
             <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('sentences validated') %></p>
             <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="./validator-badges.html">Know more</a>') %></p>
-            <%- include('../../build/views/common/badgesMilestone.ejs',{MODULE:"bolo"}) %>
+            <%- include modals/badge_milestone.ejs %>
             <%- include ../../build/views/common/sharableLink.ejs %>
             <div class="badges_information">
-                <%- include('../../build/views/common/downloadableBadges.ejs', {BADGES:["bronze","silver","gold","platinum"],MODULE:"bolo"})%>
+                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="bronze" href="#" id="<%= `bronze_badge_link` %>">
+                    <img title="<%= `Download bronze badge`%>" src="<%= `../img/bronze_badge.svg`%>" alt="" width="36px" class="disable" id="<%= `bronze_badge_link_img`%>">
+                </button>
+                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="silver" href="#" id="<%= `silver_badge_link` %>">
+                    <img title="<%= `Download silver badge`%>" src="<%= `../img/silver_badge.svg`%>" alt="" width="36px" class="disable" id="<%= `silver_badge_link_img`%>">
+                </button>
+                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="gold" href="#" id="<%= `gold_badge_link` %>">
+                    <img title="<%= `Download gold badge`%>" src="<%= `../img/gold_badge.svg`%>" alt="" width="36px" class="disable" id="<%= `gold_badge_link_img`%>">
+                </button>
+                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="platinum" href="#" id="<%= `platinum_badge_link` %>">
+                    <img title="<%= `Download platinum badge`%>" src="<%= `../img/platinum_badge.svg`%>" alt="" width="36px" class="disable" id="<%= `platinum_badge_link_img`%>">
+                </button>
             </div>
         </div>
     </div>
