Ayush | Done BOLO india UI changes

--- a/crowdsource-ui/src/views/common/buttons/back-btn/back-btn.css
+++ b/crowdsource-ui/src/views/common/buttons/back-btn/back-btn.css
@@ -63,7 +63,7 @@
     border-left: 1px solid #ccc;;
 }
 .thankyou-page {
-    padding: 3rem !important;
+    padding: 3rem 3rem 0rem 3rem !important;
 }
 .lazy {
     margin-bottom: 3rem !important;
