--- a/crowdsource-ui/src/views/thank-you.ejs
+++ b/crowdsource-ui/src/views/thank-you.ejs
@@ -11,6 +11,8 @@
     <meta property="og:site_name" content="Bolo India ">
     <meta property="og:url" content="https://boloindia.nplt.in">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script>
+    <script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
+    <script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
     <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-169921734-1")</script>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -22,20 +24,39 @@
 
 <body>
 <%- include('common/headerForContributor.ejs',{path:"./"}); %>
-<div id="content-wrapper" class="container-fluid mt-5 pt-5 pb-2 px-3 px-md-5 bg-thank-you h-100">
+<div id="content-wrapper" class="container-fluid mt-5 pb-2 px-3 px-md-5 bg-thank-you h-100">
     <div class="text-center">
+        <div class="row position-absolute top-back-btn" style="top:80px;left:35px">
+            <%- include('../../build/views/common/back-btn.ejs',{url:"./home.html"}) %>
+        </div>
         <h1 class="display-5 font-wt-900 site-blue">
             <%= __('Thank you for contributing!') %>
         </h1>
     </div>
-    <div class="row mt-5">
-        <div class="col-12 col-sm-3 text-muted text-center text-sm-right align-self-sm-center align-self-end"><b>
-                <p id="hour-value" class="mb-0">0</p>
-                <div><span class="spinner"></span></div>
-            </b><b></b></div>
-        <div class="col-12 col-sm-6 text-left align-self-sm-center align-self-start"><img src="../img/thanks.svg" class="img-fluid w-100" alt="Total Sentence Progress">
-            <div class="bg-primary position-absolute rounded-pill" id="total-progress"></div>
-            <div class="position-absolute rounded-pill" id="total-progress-bulb"></div>
+    <div class="row lazy">
+        <div class="col-lg-12 col-md-11 col-lg-11 thankyou-page ml-lg-auto">
+            <div class="row m-0">
+                <div class="col-2"></div>
+                <div class="col-lg-3 col-md-3 col-sm-6 pl-0 web-view">
+                    <h4 class="h4 my-3 font-weight-normal text-right">
+                        <%= __('Your language and top 3 most contributed languages') %>
+                    </h4>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 pl-0 mobile-view">
+                    <h4 class="h4 my-3 font-weight-normal text-center">
+                        <%= __('Your language and top 3 most contributed languages') %>
+                    </h4>
+                </div>
+                <div class="col-lg-6 col-md-9 col-sm-6 thankyou-bar-graph">
+                    <div id="bar_charts_container">
+                        <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
+                            <div><span class="spinner"></span></div>
+                        </div>
+                        <%- include ../../build/views/common/horizontalBarGraph.ejs %>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+            </div>
         </div>
     </div>
 
@@ -48,7 +69,7 @@
                 <span class="marquee"><%= __('You are on a spree !!') %></span>
             </div>
             <div id="contribution_text" class="d-none">
-                <h4 class="mb-3 thank-you-title mt-5 mt-lg-0"><%= __('WooHoo!! You took the first important step') %></h4>
+                <h4 class="mb-3 thank-you-title mt-5 mt-lg-0"><%= __('You took the first important step') %></h4>
             </div>
             <div id="before_badge_content" class="d-none">
                 <h4 class="mb-3 mt-5 mt-lg-0"><%- __('You are driving the spirit of your language') %></h4>
@@ -91,33 +112,6 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5" id="did_you_know_section">
-        <div class="col-lg-8 offset-lg-2 border p-4 stats-container">
-            <div class="row justify-content-around align-items-center">
-                <div class="title">
-                    <%= __('Did you know?') %>
-                </div>
-                <div class="most-data-recorded">
-                    <p><%- __('Most Contributed - <span id="languageId"></span>') %> </p>
-                    <div class="position-relative">
-                        <div class="progress mb-2 w-80">
-                            <div id="highest_language_progress" class="progress-bar time-contributed" role="progressbar" style="width:0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <span id="highest_language_time" class="time"></span>
-                    </div>
-                </div>
-                <div class="lang-data-recorded">
-                    <p><%- __('Data recorded for <span id="languageChoiceId"></span>') %></p>
-                    <div class="position-relative">
-                        <div class="progress mb-2 w-80">
-                            <div id="contribute_language_progress" class="progress-bar time-contributed" role="progressbar" style="width:0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            <span id="contribute_language_time" class="time"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="row justify-content-center mt-5">
         <div class="col-lg-3 col-md-6 col-8 text-center">
             <div class="mb-3">
@@ -131,7 +125,6 @@
 
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<%- include('common/footer.ejs',{path:"./"}) %>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="../js/thank-you.js"></script>
