--- a/crowdsource-ui/src/views/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/validator-prompt-page.ejs
@@ -23,7 +23,18 @@
 <div id="validator-page-content">
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column">
-            <div class="d-flex justify-content-end pt-3 record-btn-container">
+            <div class="d-flex justify-content-end pt-3 record-btn-container position-relative">
+                <div class="row position-absolute dekho-back-btn top-back-btn">
+                    <button class="btn btn-link p-0 back-btn" id="back-btn">
+                        <a href="./home.html" class="nav-link" style="color:#959595;font-size:20px">
+                            <span class="material-icons" style="vertical-align:sub">
+                    arrow_back
+                    </span>
+                            <span class="back-text"><%= __('Back') %></span>
+                    
+                        </a>
+                    </button>
+                </div>
                 <%- include components/report-btn.ejs %>
                 <%- include components/mic-speaker-test-btn.ejs %>
             </div>
@@ -35,7 +46,7 @@
                                 <%= __('Instructions') %>
                             </span></div>
             </div>
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-5" id="sentences-row">
+            <div class="row justify-content-center mb-5 mb-lg-0" id="sentences-row">
                 <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLabel"></label></div>
             </div>
             <div class="validation-container" id="validation-container">
@@ -130,7 +141,6 @@
         <%- include modals/validator-instructions.ejs %>
         <%- include modals/validation-report-modal.ejs %>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <%- include('common/footer.ejs',{path:"./"}) %>
         <script src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
