--- a/crowdsource-ui/src/views/modules/sunoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/thankyou/validation/validator-thank-you.ejs
@@ -25,7 +25,7 @@
 
 <body>
 <%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Suno India", PAGE_TITLE:"Validate"}); %>
-<div id="content-wrapper" class="container-fluid mt-5 pt-2 pb-2 px-3 px-md-5 bg-thank-you h-100">
+<div id="content-wrapper" class="container-fluid mt-5 pb-2 px-3 px-md-5 bg-thank-you h-100">
     <div class="text-center">
         <div class="row position-absolute top-back-btn">
             <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5 mt-lg-0">
+    <div class="row mt-3 mt-lg-0">
         <div class="col-lg-8 offset-lg-2 border border-primary p-4-5 text-center overflow-hidden contribuion-info">
             <div id="champion_text" class="champion-ribbon d-none">
                 <span class="marquee"><%= __('You are a champion') %></span>
