--- a/crowdsource-ui/src/assets/css/common.css
+++ b/crowdsource-ui/src/assets/css/common.css
@@ -139,6 +139,9 @@ body {
    top: 39px;
    left: -4px;
   }
+  .bolo-back-btn {
+    left: 20px !important;
+   }
   .dekho-back-btn {
     left: 1px !important;
     margin-top: -7px !important;
@@ -146,6 +149,20 @@ body {
 
   .top-back-btn .back-text {
     display: none;
+  }
+  #dislike_button svg {
+    height: 80px;
+    width: 160px;
+  }
+
+  #like_button svg {
+    height: 80px;
+    width: 160px;
+  }
+
+  #audio-player-btn img {
+    height: 50px;
+    width: 50px;
   }
 }
 
