--- a/crowdsource-ui/src/views/common/feedback/feedback.ejs
+++ b/crowdsource-ui/src/views/common/feedback/feedback.ejs
@@ -14,7 +14,7 @@
                 <div class="text-center" style="color:#8b8b8b;margin-top:9px;margin-bottom:24px">
                     <%= __('We would like to get your feedback to improve this site') %>
                 </div>
-                <button type="button" id="report_close_btn" class="btn btn-close text-muted" data-bs-dismiss="modal" aria-label="Close">
+                <button type="button" id="feedback_close_btn" class="btn btn-close text-muted" data-bs-dismiss="modal" aria-label="Close">
                     &times;
                 </button>
             </div>
@@ -86,9 +86,9 @@
                 <div class="mb-4 mt-4">
                     <div class="form-row opinion">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input sad" type="radio" name="opinionRadio" id="sad_id" value="Sad">
-                            <label class="form-check-label xs-radio-label opinion-label" for="sad_id">
-                                <svg width="52" height="52" class="sad-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <input class="form-check-input very_sad" type="radio" name="radio-opinion" id="very_sad_id" value="very_sad">
+                            <label class="form-check-label xs-radio-label opinion-label" for="very_sad_id">
+                                <svg width="52" height="52" class="very_sad-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M25.9987 47.6693C37.9649 47.6693 47.6654 37.9688 47.6654 26.0026C47.6654 14.0364 37.9649 4.33594 25.9987 4.33594C14.0325 4.33594 4.33203 14.0364 4.33203 26.0026C4.33203 37.9688 14.0325 47.6693 25.9987 47.6693Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
                                     <path d="M17.332 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
                                     <path d="M34.6641 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
@@ -98,9 +98,9 @@
                         </div>
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input neutral-1" type="radio" name="opinionRadio" id="nuetral_1_id" value="Neutral1">
-                            <label class="form-check-label xs-radio-label opinion-label" for="nuetral_1_id">
-                                <svg width="52" height="52" class="neutral1-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <input class="form-check-input sad" type="radio" name="radio-opinion" id="sad_id" value="sad">
+                            <label class="form-check-label xs-radio-label opinion-label" for="sad_id">
+                                <svg width="52" height="52" class="sad-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M25.9987 47.6693C37.9649 47.6693 47.6654 37.9688 47.6654 26.0026C47.6654 14.0364 37.9649 4.33594 25.9987 4.33594C14.0325 4.33594 4.33203 14.0364 4.33203 26.0026C4.33203 37.9688 14.0325 47.6693 25.9987 47.6693Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
                                     <path d="M17.332 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
                                     <path d="M34.6641 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
@@ -110,7 +110,7 @@
                         </div>
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input neutral" type="radio" name="opinionRadio" id="neutral_id" value="neutral">
+                            <input class="form-check-input neutral" type="radio" name="radio-opinion" id="neutral_id" value="neutral">
                             <label class="form-check-label xs-radio-label opinion-label" for="neutral_id">
                                 <svg width="52" height="52" class="neutral-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M25.9987 47.6693C37.9649 47.6693 47.6654 37.9688 47.6654 26.0026C47.6654 14.0364 37.9649 4.33594 25.9987 4.33594C14.0325 4.33594 4.33203 14.0364 4.33203 26.0026C4.33203 37.9688 14.0325 47.6693 25.9987 47.6693Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
@@ -122,25 +122,25 @@
                         </div>
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input happy" type="radio" name="opinionRadio" id="happy_id" value="happy">
+                            <input class="form-check-input happy" type="radio" name="radio-opinion" id="happy_id" value="happy">
                             <label class="form-check-label xs-radio-label opinion-label" for="happy_id">
                                 <svg width="52" height="52" class="happy-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path class="happy-svg" d="M25.9987 47.6693C37.9649 47.6693 47.6654 37.9688 47.6654 26.0026C47.6654 14.0364 37.9649 4.33594 25.9987 4.33594C14.0325 4.33594 4.33203 14.0364 4.33203 26.0026C4.33203 37.9688 14.0325 47.6693 25.9987 47.6693Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
-                                    <path class="happy-svg" d="M17.332 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
-                                    <path class="happy-svg" d="M34.6641 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
-                                    <path class="happy-svg" d="M34.6654 30.3359C33.582 33.5859 30.787 36.8359 25.9987 36.8359C21.2104 36.8359 18.4154 33.5859 17.332 30.3359" stroke="#959595" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M25.9987 47.6693C37.9649 47.6693 47.6654 37.9688 47.6654 26.0026C47.6654 14.0364 37.9649 4.33594 25.9987 4.33594C14.0325 4.33594 4.33203 14.0364 4.33203 26.0026C4.33203 37.9688 14.0325 47.6693 25.9987 47.6693Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M17.332 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M34.6641 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M34.6654 30.3359C33.582 33.5859 30.787 36.8359 25.9987 36.8359C21.2104 36.8359 18.4154 33.5859 17.332 30.3359" stroke="#959595" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                             </label>
                         </div>
     
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input very-happy" type="radio" name="opinionRadio" id="very-happy_id" value="very_happy" checked="checked">
-                            <label class="form-check-label xs-radio-label opinion-label" for="very-happy_id">
+                            <input class="form-check-input very-happy" type="radio" name="radio-opinion" id="very_happy_id" value="very_happy">
+                            <label class="form-check-label xs-radio-label opinion-label" for="very_happy_id">
                                 <svg class="very-happy-svg" width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path class="very-happy-svg" d="M26.0006 47.6654C37.9668 47.6654 47.6673 37.9649 47.6673 25.9987C47.6673 14.0325 37.9668 4.33203 26.0006 4.33203C14.0345 4.33203 4.33398 14.0325 4.33398 25.9987C4.33398 37.9649 14.0345 47.6654 26.0006 47.6654Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
-                                    <path class="very-happy-svg" d="M17.334 19.6073V19.3906" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
-                                    <path class="very-happy-svg" d="M34.668 19.6073V19.3906" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
-                                    <path class="very-happy-svg" d="M26.0007 38.9987C28.2992 38.9987 30.5036 38.0856 32.1289 36.4603C33.7542 34.835 34.6673 32.6306 34.6673 30.332H17.334C17.334 32.6306 18.2471 34.835 19.8724 36.4603C21.4977 38.0856 23.7021 38.9987 26.0007 38.9987Z" stroke="#959595" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M26.0006 47.6654C37.9668 47.6654 47.6673 37.9649 47.6673 25.9987C47.6673 14.0325 37.9668 4.33203 26.0006 4.33203C14.0345 4.33203 4.33398 14.0325 4.33398 25.9987C4.33398 37.9649 14.0345 47.6654 26.0006 47.6654Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M17.334 19.6073V19.3906" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M34.668 19.6073V19.3906" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M26.0007 38.9987C28.2992 38.9987 30.5036 38.0856 32.1289 36.4603C33.7542 34.835 34.6673 32.6306 34.6673 30.332H17.334C17.334 32.6306 18.2471 34.835 19.8724 36.4603C21.4977 38.0856 23.7021 38.9987 26.0007 38.9987Z" stroke="#959595" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>                                    
                             </label>
                         </div>
