--- a/crowdsource-ui/src/views/about-us.ejs
+++ b/crowdsource-ui/src/views/about-us.ejs
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <%- include('common/headerForContributor.ejs',{path:"./"}); %>
-        <div class="container-fluid">
+<%- include('common/header.ejs',{bolo:"./home.html", suno:"./sunoIndia/home.html",likho:"./likhoIndia/home.html",dekho:"./dekhoIndia/home.html",path:"./"}); %>
+<div class="container-fluid">
             <div class="row pt-lg-5">
                 <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
                     <h1 class="display-5 font-wt-900 site-blue lh-5">
