Ayush | Fixed some UI issues

--- a/crowdsource-ui/src/assets/css/common.css
+++ b/crowdsource-ui/src/assets/css/common.css
@@ -168,7 +168,7 @@ body {
 
 @media (min-width: 767px) {
   .d-none-mob {
-    display: block;
+    display: flex;
   }
  .top-back-btn{
    top: 20px;
