--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -141,10 +141,11 @@
                     <button class="btn align-self-start mb-2 w-100" disabled="disabled" id="like_button">
                         <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="1" y="1" width="206" height="64" rx="32" fill="white" stroke="#007BFF" stroke-width="2"/>
-                            <path d="M34.5 37.5L42 43.5L57.5 26" stroke="#007BFF" stroke-width="3" stroke-linecap="round"/>
+                            <path d="M34.5 37.5L42 43.5L57.5 26" stroke="#007BFF" stroke-width="3" stroke-linecap="round" fill="#007BFF"/>
                             <text x="80" y="43" font-family="lato" font-size="24" fill="#007BFF" style="text-align:center">
                                 <%= __('Correct') %>
                             </text>
+                           
                         </svg>
                     </button>
                     <button class="btn align-self-start mb-2 w-100 d-none" disabled="disabled" id="submit-edit-button">
