Ayush | Fix skip button position

--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -195,7 +195,7 @@
             </div>
 
             <div class="row justify-content-center web-view" id="skip_btn_row">
-                <button class="btn text-primary mt-2 mb-2 fs-1_5-rem" id="skip_button">
+                <button class="btn text-primary mt-2 mb-2 fs-1_5-rem ml-3" id="skip_button">
                     <%= __('Skip') %>
                 </button>
             </div>
